fix modal being off center because of transform override

--- a/src/styles/modal.module.scss
+++ b/src/styles/modal.module.scss
@@ -2,8 +2,7 @@
   position: fixed;
   top: 50%;
   left: 50%;
-  transform:translateX(-50%);
-  transform: translateY(-50%);
+  transform: translate(-50%, -50%);
 }
 
 .modalBackground {
